manifestsAzure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
      - name: linkwarden
        image: ghcr.io/linkwarden/linkwarden:latest
        ports:
        - containerPort: 3000
