manifestsAzure/svcLinkwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-service
  namespace: default
spec:
  selector:
    app: linkwarden
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
